Multiple tests fail with assert(cld->klasses() != 0LL) failed: unexpected NULL for cld->klasses()

XMLWordPrintable

    • b15
    • 15
    • b22
    • Not verified

      This failure seems to have started after JEP 371 Hidden Classes was pushed:

      # Internal Error (t:/workspace/open/src/hotspot/share/memory/metaspaceTracer.cpp:68), pid=21500, tid=41236
      # assert(cld->klasses() != 0LL) failed: unexpected NULL for cld->klasses()

      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0x9e1f31] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
      V [jvm.dll+0xbe4dfb] VMError::report+0xf0b (vmerror.cpp:727)
      V [jvm.dll+0xbe66ae] VMError::report_and_die+0x8ae (vmerror.cpp:1535)
      V [jvm.dll+0xbe6da4] VMError::report_and_die+0x64 (vmerror.cpp:1319)
      V [jvm.dll+0x416262] report_vm_error+0x102 (debug.cpp:264)
      V [jvm.dll+0x95f593] MetaspaceTracer::send_allocation_failure_event<EventMetaspaceAllocationFailure>+0xe3 (metaspacetracer.cpp:68)
      V [jvm.dll+0x94f8f0] Metaspace::allocate+0x160 (metaspace.cpp:1326)
      V [jvm.dll+0x40357d] ConstantPool::allocate+0x3d (constantpool.cpp:63)
      V [jvm.dll+0x394396] ClassFileParser::parse_stream+0x466 (classfileparser.cpp:6217)
      V [jvm.dll+0x384741] ClassFileParser::ClassFileParser+0x511 (classfileparser.cpp:6080)
      V [jvm.dll+0x81d481] KlassFactory::create_from_stream+0x291 (klassfactory.cpp:204)
      V [jvm.dll+0xb3fd02] SystemDictionary::parse_stream+0x182 (systemdictionary.cpp:1071)
      V [jvm.dll+0x6b85e0] jvm_lookup_define_class+0x550 (jvm.cpp:1103)
      V [jvm.dll+0x6dd065] JVM_LookupDefineClass+0x275 (jvm.cpp:1168)
      C [java.dll+0x1606]

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            Chris Plummer
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: