8243572: Multiple tests fail with assert(cld->klasses() != 0LL) failed: unexpected NULL for cld->klasses()

Merge unsafe anonymous class stats with hidden classes, avoiding having to call cld->klasses()

Reviewed-by: lfoltan, mchung, mgronlun